# OmerOpsMap

./: .env.example  .gitattributes  .gitignore  AI_AGENT_INTEGRATION.md  ARCHITECTURE.md  CHANGELOG.md  DATA_UPLOAD_GUIDE.md  DEPLOYMENT.md  DIAGRAMS_ONLY.md  DOCUMENTATION_INDEX.md  ENV_TEMPLATE.md  MANUAL_TESTING_CHECKLIST.md  QUICK_START.md  README.md  START_HERE.md  db.js  deploy-fresh.sh  deploy-frontend.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  import_instructions.md  jsconfig.json  package-lock.json  package.json  refresh_all.sh  vite.config.js
.claude/: settings.local.json
back/: .gitignore  README.MD
back/Ai_agent/: Dockerfile  README.md  ingestion.py  main.py  pyproject.toml  server.py
back/Ai_agent/configuration/: README.md  config_llm.yaml  loader.py
back/Ai_agent/configuration/prompts/: __init__.py  citizen_assistant.py  moderation_gate.py  tool_selection.py
back/Ai_agent/graph/: consts.py  graph.py  state.py
back/Ai_agent/graph/agents/: tool_router.py
back/Ai_agent/graph/chains/: moderation.py  router.py  tool_router.py
back/Ai_agent/graph/chains/tests/: test_chains.py
back/Ai_agent/graph/mcp/: clients.py  tools.py
back/Ai_agent/graph/nodes/: __init__.py  moderate.py  tool_agent.py
back/Ai_agent/graph/prompts/: __init__.py  prompt_moderate.py
back/MCP_servers/math/: Dockerfile  pyproject.toml  server.py
back/MCP_servers/nearby_sites/: Dockerfile  pyproject.toml  server.py
back/MCP_servers/web_search/: Dockerfile  pyproject.toml  server.py
data_server/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  requirements.txt  start.sh
data_server/alembic/: env.py
data_server/app/: __init__.py  config.py  database.py  main.py
data_server/data/: empty.xlsx
data_server/scripts/: create_admin.py  import_excel_to_db.py  init_admin.py  migrate_excel.py  run_migrations.sh  template_permanent.xlsx  template_temporary.numbers  template_temporary.xlsx
data_server/tests/: conftest.py  test_geofence.py  test_openmeteo_client.py  test_oref_client.py  test_sync_orchestrator.py  test_tomtom_client.py
front/: .dockerignore  .gitignore  App.css  App.jsx  Dockerfile  Dockerfile.dev  README.md  app.js  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  styles.css  vite.config.js
front/public/: Omer_GIS_Reorganized_Final.xlsx
front/src/: index.css  main.jsx
nginx/: nginx.conf
src/: Layout.jsx  pages.config.js
src/api/: apiClient.js
src/components/: ParksMap.jsx
src/lib/: AuthContext.jsx  NavigationTracker.jsx  PageNotFound.jsx  app-params.js
src/pages/: Admin.jsx  Home.jsx  (+1 more)
(+151 files in other folders)
